[tool.poetry]
name = "introchain"
version = "0.1.0"
description = "Notebooks to introduce LangChain"
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
langchain = ">=0.3.9"
langchain-anthropic = ">=0.1.15"
langchain-community = ">=0.0.36"
langchain-openai = ">=0.1.6"
ipykernel = "^6.29.5"
rich = "^13.9.4"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
chromadb = "^0.5.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
